refactor: migrate from eslint to biome for linting and formatting
- replace eslint with biome in package.json and remove eslint dependencies
- update lint scripts to use biome commands
- add biome configuration file with recommended settings
- reformat codebase to match biome style guidelines
- update CI workflow to use biome lint command
- standardize code style across all files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
       continue-on-error: true
       
     - name: Run linter
-      run: pnpm run lint
+      run: pnpm run lint:ci
       
     - name: Build project
       run: pnpm run build
