--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "portfolio",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.7",
-    "vite-plugin-svgr": "^4.5.0"
-  }
+	"name": "portfolio",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint:ci": "biome ci src/",
+		"lint:check": "biome check src/",
+		"lint": "biome check src/ --write --verbose",
+		"lint:fix": "biome check src/ --write --unsafe --verbose",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.5",
+		"@types/react": "^19.1.16",
+		"@types/react-dom": "^19.1.9",
+		"@vitejs/plugin-react": "^5.0.4",
+		"globals": "^16.4.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.7",
+		"vite-plugin-svgr": "^4.5.0"
+	}
 }
